--- a/Contacts.html
+++ b/Contacts.html
@@ -85,7 +85,14 @@
                 <a href="/Services.html" class="footer__link">Features</a>
             </div>
         </div>
-     <a href="https://dynamic-technologies.ca"><img class="Dtech__tag" src="./images/Dtech tag.png" alt=" " class="d-tech"/></a>
+    <a class="Tagline" href="https://cristianovala.github.io/Site/">Powered By CV</a>
+     <style>
+      .Tagline{
+         font-size: 1.5rem;
+         color: #676767;
+         text-decoration: none;
+      }
+     </style>
     </div>
     <script type="text/javascript">
         window.addEventListener('scroll', reveal);
